--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -11,7 +11,7 @@
     <div class="alert alert-info">
         <form action="/create_user" method="POST">
             <div class="form-group">
-                <label for="lastname">Фамsssилия</label>
+                <label for="lastname">Фамилия</label>
                 <input type="text" class="form-control" name="lastname" placeholder="Введите фамилию">
             </div>
             <div class="form-group">
