--- a/templates/users_page_detail.html
+++ b/templates/users_page_detail.html
@@ -15,6 +15,10 @@
         <table class="table table-sm" style="width: auto;">
             <tbody>
                 <tr>
+                    <th scope="row">ID</th>
+                    <td>{{ user.id }}</td>
+                </tr>
+                <tr>
                     <th scope="row">Фамилия</th>
                     <td>{{ user.last_name }}</td>
                 </tr>
@@ -32,16 +36,12 @@
                 </tr>
             </tbody>
         </table>
-        <!-- <div style="display:flex; align-items:center; justify-content: space-between;">
-            <div>
-                <h6>Фамилия: {{ user.last_name }}</h6>
-                <h6>Имя: {{ user.first_name }} </h6>
-                <h6>Отчество: {{ user.patronymic }}</h6>
-                <h6>Дата рождения: {{ user.birthday }}</h6>
-            </div>
 
-        </div> -->
+        <a type="button" class="btn btn-warning" href="/">Редактировать</a>
+        <a type="button" class="btn btn-danger" href="/users/{{user.id}}/delete">Удалить</a>
+
     </div>
 
 </div>
+
 {% endblock %}
