--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,9 @@
                 <li class="nav-item"><a href="/about" class="nav-link">О нас</a></li>
                 <li class="nav-item"><a href="/users_page" class="nav-link">Пользователи</a></li>
 
-                <li class="nav-item"><a href="/create_user" class="nav-link active" aria-current="page">Создать</a></li>
+                <li class="nav-item"><a href="/create_user" class="nav-link">Создать</a></li>
+
+                <li class="nav-item"><a href="/auth" class="nav-link active" aria-current="page">Вход</a></li>
 
             </ul>
         </header>
